# tinycsharp

./: CMakeLists.txt  LICENSE  README.md
include/: lexer.h  parser.h  token.h  utils.h
src/: lexer.cpp  main.cpp
tests/: test_lexer.cpp
